syntax = "proto3";

option java_package = "me.anmolverma.users";
option java_multiple_files = true;
option java_outer_classname = "UsersProto";

message User {
  int32 id = 1;
  string uname = 2;
  string displayName = 3;
  string phone = 4;
  string email = 5;
  SocialType socialType = 6;
}

message Users {
  repeated User users = 1;
}

message UserSearch{
  string uname = 1;
  string displayName = 2;
}

enum SocialType{
  FACEBOOK = 0;
  GOOGLE = 1;
  APPLE = 2;
  EMAIL = 3;
}

message Response {
  int32 code = 1;
  string message = 2;
}

service UsersService {
  rpc registerUser(User) returns (Response);
  rpc loginUser(User) returns (Response);
  rpc findUser(UserSearch) returns (Users);
}