syntax = "proto3";

option java_package = "me.anmolverma.chat";
option java_multiple_files = true;
option java_outer_classname = "ChatProto";

import "me/anmolverma/users/User.proto";
import "google/protobuf/empty.proto";

message ChatGroup {
  Users users = 1;
  string groupName = 2;
  string groupDescription = 3;
  string groupImage = 4;
  string groupJoinUri = 5;
  repeated string adminUserIds = 6;
  string groupId = 7;
}

message ChatGroupResponse {
  ChatGroup group = 1;
  Response opResponse = 2;
}

message ChatMessage{
  string uuid = 1;
  string message = 2;
  bytes fileMessage = 3;
}

message Presence{
  string userId = 1;
  Availability availability = 2;
}

enum Availability{
  AVAILABLE = 0;
  TYPING = 1;
  GONE = 2;
}

service ChatService {
  rpc createGroup(ChatGroup) returns(ChatGroupResponse);
  rpc deleteGroup(ChatGroup) returns(ChatGroupResponse);
  rpc sendMessage(stream ChatMessage) returns(google.protobuf.Empty);
  rpc sendPresence(stream Presence) returns(google.protobuf.Empty);
}